<resources>
    <string name="app_name">Demo</string>
    <string name="title_mine">我的</string>
    <string name="title_courses">课程</string>
    <string name="title_notifications">通知</string>

    <string name="server_header">服务器设置</string>

    <string name="server_manually_preferences">手动设置服务器</string>
    <string name="server_ip_preferences">服务器IP地址</string>
    <string name="server_port_preferences">服务器端口</string>
    <string name="server_password_preferences">服务器密码</string>
    <string name="server_ip_key">server_ip</string>
    <string name="server_port_key">server_port</string>
    <string name="server_password_key">server_password</string>
    <string name="not_set">未设置</string>
    <string name="password">******</string>

    <string name="server_ip_dialog">IP地址：</string>
    <string name="server_port_dialog">端口号：</string>
    <string name="positive_button_text">确定</string>
    <string name="negative_button_text">取消</string>

    <string name="hint_email">hit邮箱</string>
    <string name="hint_password">密码</string>
    <string name="button_text_login">登录</string>
    <string name="button_text_register">注册</string>
    <string name="button_text_forget_password">忘记密码</string>
    <string name="mail_suffix_teacher">\@hit.edu.cn</string>
    <string name="email_suffix_student">\@stu.hit.edu.cn</string>
    <string name="hint_repeat_password">重复密码</string>
    <string name="button_text_confirm">确定</string>
    <string name="button_text_get_verification_code">获取验证码</string>
    <string name="hint_verification_code">验证码</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>