<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory app:title="@string/server_header">
        <SwitchPreferenceCompat
            app:key="server_manually"
            app:title="@string/server_manually_preferences" />
        <EditTextPreference
            app:positiveButtonText="@string/positive_button_text"
            app:negativeButtonText="@string/negative_button_text"
            app:dependency="server_manually"
            app:key="server_ip"
            app:title="@string/server_ip_preferences"
            tools:summary="@string/not_set" />
        <EditTextPreference
            app:positiveButtonText="@string/positive_button_text"
            app:negativeButtonText="@string/negative_button_text"
            app:dependency="server_manually"
            app:key="server_port"
            app:title="@string/server_port_preferences"
            tools:summary="@string/not_set" />
        <EditTextPreference
            app:positiveButtonText="@string/positive_button_text"
            app:negativeButtonText="@string/negative_button_text"
            app:dependency="server_manually"
            app:key="server_password"
            app:title="@string/server_password_preferences"
            tools:summary="@string/not_set" />
    </PreferenceCategory>
</PreferenceScreen>