<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_courses">

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.demo.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.demo.ui.courses.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.demo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>